--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />     
     <script src="https://kit.fontawesome.com/34157e783e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos.css" />
-    <title>prueba boostrap</title>
+    <link rel="shortcut icon" href="img/LOGO DELMA.png" type="image x-icon">
+    <title>Casa Delma SRL</title>
   </head>
 
   <body>
